--- a/CHANGES
+++ b/CHANGES
@@ -253,6 +253,7 @@ General changes
 - Now looking for local agis_ddmendpoints.json before trying download from AGIS/CVMFS, in loadDDMConfData(). Requested by Wenjing Wu (SiteInformation)
 - Added ckpt* to removeRedundantFiles() (ATLASExperiment)
 - Using with open in loadURLData(), grammatical change, removed warning text (SiteInformation)
+- Added WebDAV protocol ('davs') to GFAL2 mover, requested Frank Berghaus (gfalcopy_sitemover)
 
 Core count
 - Simplified setNumberOfCores() as discussed in JIRA ticket https://its.cern.ch/jira/browse/ADCDPA-49
