--- a/CHANGES
+++ b/CHANGES
@@ -268,6 +268,7 @@ Direct access
 - Created get_pfns() and get_turls() (mover)
 - Created getReplicaDictionaryFromXML() (FileHandling)
 - Created addFullPathsAsInput() (RunJobUtilities)
+- Updated getDirectAccess() to be stricter (FileHandling)
 
 Updates from Alexander Bogdanchikov
 
