--- a/CHANGES
+++ b/CHANGES
@@ -175,6 +175,14 @@ M movers/storm_sitemover.py (2)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+70.1
+
+General changes:
+
+Updates from ..
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
