Updated benchmarking, problem found with a conversion

--- a/CHANGES
+++ b/CHANGES
@@ -177,9 +177,10 @@ M movers/storm_sitemover.py (2)
 
 70.1
 
-General changes:
+BENCHMARKS ON
 
-Updates from ..
+General changes:
+- Fixed conversion problem (%d instead of %s) in collectCoreInfo() (JobLog)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
