--- a/CHANGES
+++ b/CHANGES
@@ -182,6 +182,25 @@ General changes:
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+70.2
+
+General changes:
+- Cleaned up a reset of job.coreCount (wrongly set to 1 when ATHENA_PROC_NUMBER was not set) (RunJobEvent)
+
+Updates from Wen Guan:
+
+  https://github.com/PanDAWMS/pilot/pull/149
+
+Commit Summary
+
+fix download event ranges
+
+File Changes
+
+M EventRanges.py (2)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
