Dropped here from asetup options

--- a/CHANGES
+++ b/CHANGES
@@ -214,6 +214,13 @@ M pUtil.py (8)
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+70.3
+
+General changes:
+- Dropped "here" in asetup options, getASetupOptions(). Requested by G. Rybkin et al (ATLASExperiment)
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 TODO:
 
 OS log transfers:
